# emblem-studio

./: .gitignore  NOTICE  README.md  SECURITY.md  test-all.sh
.github/workflows/: release.yml
release/: SHA256SUMS  check-release.js  package.js  release-manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: engine.js  gif-encoder.js  gif-encoder.test.js  index.html  motion-input.js  motion-input.test.js  raster.js
web/assets/: rm3-palette.css
