[package]
name = "emblem-studio"
version = "1.0.0"
description = "Image to animated ASCII emblem authoring"
authors = ["RM3 <a1v@rm3.pro>"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
